--- a/sample_user_config.json
+++ b/sample_user_config.json
@@ -1,11 +1,16 @@
+
 {
-    "extra_cmdline": {
-        "pid": "0x0001",
-        "vid": "0x46f4",
-        "sn": "1234XXX123",
-        "mac1": "XXYYXXYYXXYY"
-    },
-    "synoinfo": {},
-    "ramdisk_copy": {},
-    "extensions": []
+  "extra_cmdline": {
+    "vid": "0x0951",
+    "pid": "0x1666",
+    "sn": "1350PDN001692",
+    "mac1": "001132C7065E"
+  },
+  "synoinfo": {
+    "maxdisks" : "4",
+    "supportsystemperature": "no",
+    "supportsystempwarning": "no"
+  }
+  "ramdisk_copy": {},
+  "extensions": []
 }
